# nisync-python

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_debt.md  user_story.md
.github/workflows/: CI.yml  PR.yml  build.yml  report_test_results.yml  run_acceptance_tests.yml  run_unit_tests.yml  sync_github_issues_to_azdo.yml
_metadata/: attributes.py  constants.py  functions.py
includes/: errors.nimxl  nisync.h
nisync/: __init__.py  _attributes.py  _errorcodes.py  _library.py  _library_singleton.py  _visatype.py  constants.py  enums.py  errors.py  session.py
nisync/devices/: pxi6651.py  pxi6652.py  pxi6653.py  pxi6682.py  pxi6682h.py  pxi6683.py  pxi6683h.py  pxie6672.py  pxie6674.py  pxie6674t.py
samples/: __init__.py  connect_oscillator_to_pxi_clk10_in.py  reset_device.py  self_test.py
scripts/: gen_templates.py
templates/_metadata/: __init__.py.mako  attributes.py.mako  constants.py.mako  functions.py.mako
templates/nisync/: _errorcodes.py.mako  _library.py.mako  constants.py.mako  enums.py.mako  session.py.mako
tests/: __init__.py  conftest.py  test_import.py  test_time_functions.py
tests/acceptance/: __init__.py  test_reset.py  test_self_test.py  test_session.py  test_signal_and_clock_routing.py
tests/unit/: test_import.py  test_session.py  test_time_functions.py
tests/unit/samples/: __init__.py  test_connect_oscillator_to_clk10_in.py  test_reset_device.py  test_self_test.py
