[tool.poetry]
name = "nisync"
version = "0.1"
description = "NI-Sync Python API"
authors = ["NI <opensource@ni.com>"]
include = ["nisync/*"]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.8.1"
hightime = "*"

[tool.poetry.group.dev.dependencies]
# Code generation and formatting
black = "*"
mako = ">=1.3.2"
CppHeaderParser = "*"

# Linting
ni-python-styleguide = ">=0.4.0"

# Test
pytest = ">=8"
pytest-cov = ">=2.10.1"

[tool.coverage.run]
data_file = "dist/.coverage"

[tool.pytest.ini_options]
addopts = "nisync/ tests/ --cov nisync --strict-markers --doctest-modules"

[tool.black]
line-length = 100

[tool.ni-python-styleguide]
application-import-names = "nisync"
extend_exclude = "nisync/_attributes.py,nisync/errors.py,nisync/_errorcodes.py,_library.py,enums.py,session.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
