[tool.poetry]
name = "nisync"
version = "0.2"
description = "NI-Sync Python API"
authors = ["NI <opensource@ni.com>"]
maintainers = ["NI <opensource@ni.com>"]
readme = "README.md"
repository = "https://github.com/ni/nisync-python"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
include = ["nisync/*"]

[tool.poetry.dependencies]
python = "^3.9"
hightime = "*"

[tool.poetry.group.dev.dependencies]
# Code generation and formatting
black = "*"
mako = ">=1.3.2"
CppHeaderParser = "*"

# Linting
ni-python-styleguide = ">=0.4.0"

# Test
pytest = ">=8.2.2"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"

[tool.coverage.run]
data_file = "dist/.coverage"

[tool.pytest.ini_options]
addopts = "nisync/ tests/ --cov nisync --strict-markers --doctest-modules"

[tool.black]
line-length = 100

[tool.ni-python-styleguide]
application-import-names = "nisync"
extend_exclude = "nisync/_attributes.py,nisync/errors.py,nisync/_errorcodes.py,_library.py,enums.py,session.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
